@@ -5,9 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fix undefined filter_post_kses error for subsite admins in multisite in Manual Payments and Cubepoints gateways
 - Change text of last checkout breadcrumb to "Order Complete"
 - Add Paymill gateway
 - Sanitize fields in various shipping modules
+- Add New Zealand locale to paypal gateway
 
 2.8.6 - 5/8/2013 - Aaron
 ----------------------------------------------------------------------
